# todo_drf_api

./: .env  README.md  pyproject.toml  requirements.txt
api/: settings.py  urls.py
todo/: models.py  serializers.py  urls.py  views.py
todo/migrations/: 0001_initial.py  0002_initial.py  0003_todo_user.py  0004_alter_todo_options.py
users/: managers.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_managers.py  0002_alter_customuser_options_alter_customuser_managers_and_more.py
