[tool.poetry]
name = "drf_todo"
version = "0.1.0"
description = ""
authors = ["Ramzan-Ali12 <m.ramzan.iub.edu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
djangorestframework = "^3.15.2"
djoser = "^2.2.3"
python-dotenv = "^1.0.1"
drf-spectacular = "^0.27.2"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
